# model/system/sys_department.go
@@ -6,14 +6,14 @@ type SysDepartment struct {
 	CreatedAt        time.Time        // 创建时间
 	UpdatedAt        time.Time        // 更新时间
 	DeletedAt        *time.Time       `sql:"index"`
-	DepartmentId     string           `json:"departmentId" gorm:"not null;unique;primary_key;comment:角色ID;size:90"` // 部门ID
-	DepartmentName   string           `json:"departmentName" gorm:"comment:角色名"`                                    // 部门名称
-	ParentId         string           `json:"parentId" gorm:"comment:父角色ID"`                                        // 父级部门ID
+	DepartmentId     string           `json:"departmentId" gorm:"not null;unique;primary_key;comment:部门ID;size:90"` // 部门ID
+	DepartmentName   string           `json:"departmentName" gorm:"comment:部门名"`                                    // 部门名称
+	ParentId         string           `json:"parentId" gorm:"comment:父部门ID"`                                        // 父级部门ID
 	DataDepartmentId []*SysDepartment `json:"dataDepartmentId,omitempty" gorm:"many2many:sys_data_department_id;"`
 	Children         []SysDepartment  `json:"children,omitempty" gorm:"-"`
 	Users            []SysUser        `json:"-" gorm:"many2many:sys_user_department;"`
 }
 
 func (SysDepartment) TableName() string {
-	return "sys_department"
+	return "vo1_department"
 }
